Make sure you can always see the whole create proposal form (#1387)
If screen is too small then allow for scrolling the form content
Also add a close button to the header to make it easier to always get out, especially on mobile

Fixes https://github.com/daostack/alchemy/issues/1378

--- a/src/components/Proposal/Create/CreateProposal.scss
+++ b/src/components/Proposal/Create/CreateProposal.scss
@@ -15,6 +15,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: $shadow-3;
+  height: calc(100% - 100px);
 
   .header {
     background-color: $navy;
@@ -40,6 +41,16 @@
         font-size: 14px;
       }
     }
+
+    .closeButton {
+      background: none;
+      border: none;
+      position: absolute;
+      right: 10px;
+      color: white;
+      font-size: 28px;
+    }
+
     .editIcon {
       display: inline-block;
       margin: 10px;
@@ -80,6 +91,7 @@
     .contributionReward {
       width: 110px;
       display: inline-block;
+      height: calc(100% - 40px);
     }
 
     .dates {
@@ -366,14 +378,14 @@
 .contributionReward {
   width: 562px;
   overflow-y: auto;
-  height: 630px;
+  height: calc(100% - 40px);
 }
 
 .createWrapperWithSidebar {
   width: 735px;
   content: "";
   clear: both;
-  display: table;
+  height: calc(100% - 40px);
 
   .sidebar {
     width: 199px;
@@ -423,6 +435,8 @@
     width: 535px;
     float: left;
     border-left: 1px solid #e9eef4;
+    height: 100%;
+    overflow: auto;
 
     .tab {
       display: none;
@@ -610,6 +624,7 @@ div.description {
 @media only screen and (max-width: 475px) {
   .createWrapperWithSidebar {
     width: 100%;
+    overflow: auto;
 
     .sidebar {
       width: 100%;
@@ -620,6 +635,7 @@ div.description {
     .formWrapper {
       width: 100%;
       float: none;
+      overflow: visible;
     }
 
     .schemeSelect {
@@ -631,6 +647,7 @@ div.description {
     top: 0;
     left: 0;
     transform: translate(0, 0);
+    height: 100%;
 
     .header {
       border-radius: 0 0 0 0;
